Fixed cropping text issue.

--- a/app/styles/legacy/_schedule.scss
+++ b/app/styles/legacy/_schedule.scss
@@ -165,6 +165,7 @@ ul.schedule-table {
   
   .grid_8 {
     width: 100% !important;
+    margin: 0 !important;
   }
   
   .print-schedule {
